# PhotoBooth

./: .claude-plan.md  .env.example  .gitignore  LOCAL_DEV.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/admin/: index.html  package.json
apps/admin/src/: App.tsx  index.css
apps/admin/src/components/: Dashboard.tsx  Login.tsx
apps/admin/src/lib/: api.ts  supabase.ts
apps/desktop/: package.json  vite.config.ts
apps/desktop/src/: App.tsx  index.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/assets/: README.md
apps/desktop/src-tauri/src/: collect.rs  lib.rs  main.rs  manifest.rs  preview.rs  upload.rs
apps/desktop/src/components/: Collect.tsx  Login.tsx  Projects.tsx  Studio.tsx
apps/desktop/src/lib/: api.ts  supabase.ts
apps/gallery/: index.html  package.json  seed-demo.mjs  vite.config.ts
apps/gallery/src/: index.css  main.tsx  vite-env.d.ts
apps/gallery/src/lib/: api.ts  supabase.ts
apps/gallery/src/pages/: GalleryPage.tsx
docs/: INTEGRATIONS.md
supabase/: SETUP.md  config.toml  seed.sql
supabase/functions/admin/: index.ts
supabase/functions/gallery-get/: index.ts
supabase/functions/r2-sign-upload/: index.ts
supabase/functions/selection-submit/: index.ts
supabase/migrations/: 0001_init.sql  0002_signup_bootstrap.sql  0003_grants.sql  0004_platform_admin.sql
supabase/tests/: _auth_stub.sql  flow_test.sql  run_flow_test.sh
