[package]
name = "photobooth-studio"
version = "0.0.0"
edition = "2021"
description = "PhotoBooth Studio — local preview generation and selected-original collection"

[lib]
name = "photobooth_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image processing: fast parallel preview generation
image = "0.25"
fast_image_resize = "5"
kamadak-exif = "0.5"
rayon = "1"

# Local manifest + identity + hashing
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
walkdir = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
